# infra-challenge-forge

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-container.yml
challenges/eks-incident-response/: challenge.yaml  prompt.md
challenges/eks-incident-response/fixtures/: insecure-plan.json  secure-plan.json
challenges/eks-incident-response/reference/kubernetes/: workload.yaml
challenges/eks-incident-response/reference/terraform/: backend.example.hcl  main.tf  variables.tf  versions.tf
challenges/eks-incident-response/starter/kubernetes/: workload.yaml
challenges/eks-incident-response/starter/terraform/: main.tf  variables.tf
challenges/multi-account-cicd-recovery/: WORK.md  challenge.yaml  prompt.md
challenges/multi-account-cicd-recovery/fixtures/: insecure-plan.json  secure-plan.json
challenges/multi-account-cicd-recovery/reference/terraform/: backend.example.hcl  main.tf  variables.tf  versions.tf
challenges/multi-account-cicd-recovery/reference/terraform/modules/deployment-role/: main.tf  variables.tf  versions.tf
challenges/multi-account-cicd-recovery/reference/workflows/: deploy.yml
challenges/multi-account-cicd-recovery/starter/terraform/: main.tf  versions.tf
challenges/multi-account-cicd-recovery/starter/workflows/: deploy.yml
docs/: architecture.md  authoring-guide.md  threat-model.md
scripts/: demo.sh
src/infra_challenge_forge/: __init__.py  checks.py  cli.py  engine.py  models.py
tests/: test_engine.py
